@@ -9,13 +9,10 @@
 <fieldset class="form">
 	<legend><?cs var:html_escape(Lang.Legend.ConfigArchive) ?> </legend>
 
-	<form method="post" action="<?cs call:link("","","","","","") ?>" enctype="application/x-www-form-urlencoded">
+	<?cs call:form_header("config_archive", "") ?>
 		<input type="hidden" name="config_subset" value="archive" />
 
 		<?cs call:show_options(UI.Options.Config.Archive) ?>
-
-		<!-- include default form values -->
-		<?cs include:TemplateDir + '/form_common.cs' ?>
 
 		<input type="hidden" name="action" value="config_do" />
 		<button type="submit" name="send" value="do"><?cs var:html_escape(Lang.Buttons.UpdateConfiguration) ?></button>
