@@ -1,4 +1,0 @@
-<!-- this file should be included in every form with checkboxes and settings -->
-
-<input type="hidden" name="list" value="<?cs var:Data.List.Name ?>" />
-
